# fix-sixel

./: README.md  fix-sixel.cabal
src/: Main.hs
