cabal-version:      2.4
name:               fix-sixel
version:            0.1.0.0

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

extra-source-files: README.md

executable fix-sixel
    hs-source-dirs:   src
    main-is:          Main.hs
    build-depends:    base
                    , bytestring
    default-language: Haskell2010
